feat: OAuthSecret can be a reference to a kuberenets secret
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5264,7 +5264,10 @@ spec:
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient`
                           resource used to set up identity federation on the OpenShift
-                          side.
+                          side. This is either plain text or a reference to a Kubernetes
+                          cluster secret. In case of the reference, the target secret
+                          must have a `app.kubernetes.io/part-of=che.eclipse.org`
+                          label with the `secret` key in `data` field.
                         type: string
                     type: object
                   domain:
