--- a/deploy/deployment/kubernetes/combined.yaml
+++ b/deploy/deployment/kubernetes/combined.yaml
@@ -3533,7 +3533,7 @@ spec:
                         description: Access Token Scope. This field is specific to Che installations made for Kubernetes only and ignored for OpenShift.
                         type: string
                       oAuthSecret:
-                        description: Name of the secret set in the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
+                        description: Name of the secret set in the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side. This is either plain text or a reference to a Kubernetes cluster secret. In case of the reference, the target secret must have a `app.kubernetes.io/part-of=che.eclipse.org` label with the `secret` key in `data` field.
                         type: string
                     type: object
                   domain:
