chore: Adapt stable HelmCharts to API CheCluster v2
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/helmcharts/stable/Chart.yaml
+++ b/helmcharts/stable/Chart.yaml
@@ -52,4 +52,4 @@ annotations:
       version: v1
       name: checlusters.org.eclipse.che
       displayName: CheCluster
-      description: The `CheCluster` custom resource allows defining and managing a Che server installation"
+      description: The `CheCluster` custom resource allows defining and managing a Che server installation
