--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -5408,6 +5408,19 @@ spec:
                             - id_token
                             - access_token
                           type: string
+                        oAuthAccessTokenInactivityTimeoutSeconds:
+                          description: Inactivity timeout for tokens to set in the
+                            OpenShift `OAuthClient` resource used to set up identity
+                            federation on the OpenShift side. 0 means tokens for this
+                            client never time out.
+                          format: int32
+                          type: integer
+                        oAuthAccessTokenMaxAgeSeconds:
+                          description: Access token max age for tokens to set in the
+                            OpenShift `OAuthClient` resource used to set up identity
+                            federation on the OpenShift side. 0 means no expiration.
+                          format: int32
+                          type: integer
                         oAuthClientName:
                           description: Name of the OpenShift `OAuthClient` resource
                             used to set up identity federation on the OpenShift side.
