--- a/helmcharts/stable/templates/che-operator.ServiceAccount.yaml
+++ b/helmcharts/stable/templates/che-operator.ServiceAccount.yaml
@@ -11,6 +11,12 @@
 #
 
 apiVersion: v1
-kind: Namespace
+kind: ServiceAccount
 metadata:
-  name: eclipse-che
+  labels:
+    app.kubernetes.io/component: che-operator
+    app.kubernetes.io/instance: che
+    app.kubernetes.io/name: che
+    app.kubernetes.io/part-of: che.eclipse.org
+  name: che-operator
+  namespace: eclipse-che
