--- a/helmcharts/stable/templates/che-operator-service.Service.yaml
+++ b/helmcharts/stable/templates/che-operator-service.Service.yaml
@@ -10,20 +10,19 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
+apiVersion: v1
+kind: Service
 metadata:
-  name: che-operator
   labels:
-    app.kubernetes.io/name: che
-    app.kubernetes.io/instance: che
-    app.kubernetes.io/part-of: che.eclipse.org
     app.kubernetes.io/component: che-operator
-subjects:
-  - kind: ServiceAccount
-    name: che-operator
-    namespace: eclipse-che
-roleRef:
-  kind: ClusterRole
-  name: che-operator
-  apiGroup: rbac.authorization.k8s.io
+    app.kubernetes.io/instance: che
+    app.kubernetes.io/name: che
+    app.kubernetes.io/part-of: che.eclipse.org
+  name: che-operator-service
+  namespace: eclipse-che
+spec:
+  ports:
+  - port: 443
+    targetPort: 9443
+  selector:
+    app: che-operator
