--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -76,7 +76,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.50.0-620.next
+  name: eclipse-che-preview-openshift.v7.50.0-621.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -523,6 +523,8 @@ spec:
                 - get
                 - list
                 - watch
+                - create
+                - update
             - apiGroups:
                 - ""
               resources:
@@ -1387,7 +1389,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.50.0-620.next
+  version: 7.50.0-621.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
