fix: workspaces policies (#1429)
* fix: workspaces policies

Signed-off-by: Oleksii Orel <oorel@redhat.com>

* Update dev resources

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

Co-authored-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -541,6 +541,7 @@ spec:
                 - pods/exec
               verbs:
                 - create
+                - get
             - apiGroups:
                 - apps
               resources:
