--- a/helmcharts/stable/Chart.yaml
+++ b/helmcharts/stable/Chart.yaml
@@ -13,7 +13,7 @@
 apiVersion: v1
 description: A Helm chart for deploying Eclipse Che on a Kubernetes
 name: eclipse-che
-version: 7.49.0
+version: 7.50.0
 annotations:
   artifacthub.io/license: EPL-2.0
   artifacthub.io/links: |
@@ -33,23 +33,13 @@ annotations:
       email: oandriie@redhat.com
   artifacthub.io/operator: "true"
   artifacthub.io/operatorCapabilities: Seamless Upgrades
-  artifacthub.io/crdsExamples: "- apiVersion: org.eclipse.che/v1\n  kind: CheCluster\n\
+  artifacthub.io/crdsExamples: "- apiVersion: org.eclipse.che/v2\n  kind: CheCluster\n\
     \  metadata:\n    name: eclipse-che\n    namespace: eclipse-che\n  spec:\n   \
-    \ server:\n      cheClusterRoles: ''\n      cheWorkspaceClusterRole: ''\n    \
-    \  gitSelfSignedCert: false\n      proxyURL: ''\n      proxyPort: ''\n      proxySecret:\
-    \ ''\n      nonProxyHosts: ''\n      workspaceNamespaceDefault: \"<username>-che\"\
-    \n    database:\n      externalDb: false\n      chePostgresHostName: ''\n    \
-    \  chePostgresPort: ''\n      chePostgresSecret: ''\n      chePostgresDb: ''\n\
-    \    storage:\n      pvcStrategy: 'common'\n      pvcClaimSize: '10Gi'\n     \
-    \ preCreateSubPaths: true\n      postgresPVCStorageClassName: ''\n      workspacePVCStorageClassName:\
-    \ ''\n    auth:\n      identityProviderURL: ''\n      oAuthClientName: ''\n  \
-    \    oAuthSecret: ''\n    k8s:\n      ingressDomain: '192.168.99.101.nip.io'\n\
-    \      ingressClass: ''\n      tlsSecretName: 'che-tls'\n      securityContextFsGroup:\
-    \ ''\n      securityContextRunAsUser: ''\n    metrics:\n      enable: true\n \
-    \   devWorkspace:\n      enable: true\n"
+    \ components: {}\n    devEnvironments: {}\n    networking: {}\n    containerRegistry:\
+    \ {}\n"
   artifacthub.io/crds: |-
     - kind: CheCluster
-      version: v1
+      version: v2
       name: checlusters.org.eclipse.che
       displayName: CheCluster
       description: The `CheCluster` custom resource allows defining and managing a Che server installation
