--- a/helmcharts/stable/templates/service_account.yaml
+++ b/helmcharts/stable/templates/service_account.yaml
@@ -10,15 +10,13 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-apiVersion: cert-manager.io/v1
-kind: Issuer
+apiVersion: v1
+kind: ServiceAccount
 metadata:
+  name: che-operator
   labels:
-    app.kubernetes.io/component: che-operator
-    app.kubernetes.io/instance: che
     app.kubernetes.io/name: che
+    app.kubernetes.io/instance: che
     app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator-selfsigned-issuer
+    app.kubernetes.io/component: che-operator
   namespace: eclipse-che
-spec:
-  selfSigned: {}
