--- a/helmcharts/stable/templates/namespace.yaml
+++ b/helmcharts/stable/templates/namespace.yaml
@@ -11,12 +11,6 @@
 #
 
 apiVersion: v1
-kind: ServiceAccount
+kind: Namespace
 metadata:
-  labels:
-    app.kubernetes.io/component: che-operator
-    app.kubernetes.io/instance: che
-    app.kubernetes.io/name: che
-    app.kubernetes.io/part-of: che.eclipse.org
-  name: che-operator
-  namespace: eclipse-che
+  name: eclipse-che
