--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -38,7 +38,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.498400293Z"
+    created: "2022-07-04T16:47:11.210591892Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 11054ab46953ef33ca6c63644c462b3889d92f091d15f45ba081f14f59063bea
     name: eclipse-che
@@ -51,22 +51,7 @@ entries:
           version: v1
           name: checlusters.org.eclipse.che
           displayName: CheCluster
-          description: The `CheCluster` custom resource allows defining and managing a Che server installation"
-        - kind: CheBackupServerConfiguration
-          version: v1
-          name: chebackupserverconfigurations.org.eclipse.che
-          displayName: CheBackupServerConfiguration
-          description: The `CheBackupServerConfiguration` custom resource allows defining and managing Eclipse Che Backup Server Configurations
-        - kind: CheClusterRestore
-          version: v1
-          name: checlusterrestores.org.eclipse.che
-          displayName: CheClusterRestore
-          description: The `CheClusterRestore` custom resource allows defining and managing Eclipse Che restore
-        - kind: CheClusterBackup
-          version: v1
-          name: checlusterbackups.org.eclipse.che
-          displayName: CheClusterBackup
-          description: The `CheClusterBackup` custom resource allows defining and managing Eclipse Che backup
+          description: The `CheCluster` custom resource allows defining and managing a Che server installation
       artifacthub.io/crdsExamples: |
         - apiVersion: org.eclipse.che/v1
           kind: CheCluster
@@ -128,9 +113,9 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.496682425Z"
+    created: "2022-07-04T16:47:11.209020184Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
-    digest: c5c3453f886aa2f56439d55cc7e7d38800d204e0788ec97918cf1b23a9f798b8
+    digest: 5c3279d2948902df12b2d91d25112c1f44f6568cb058c9207eb1e31e411eff19
     name: eclipse-che
     urls:
     - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.49.0.tgz
@@ -218,7 +203,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.495494978Z"
+    created: "2022-07-04T16:47:11.207984479Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 5c77e651a5ea45ad6374dcc41ea8967bdf0ac6d72e63cc49720b26faa9f82656
     name: eclipse-che
@@ -308,7 +293,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.494234428Z"
+    created: "2022-07-04T16:47:11.206827973Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 0dd57c9b9a2aade95953dc1361bea0090cf71df7b34e54a754829ba7e4a75846
     name: eclipse-che
@@ -398,7 +383,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.493031681Z"
+    created: "2022-07-04T16:47:11.205677967Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 0250cbfc08cc24832250173aa8fb68a193061c2a2314f49b087f7dc2aba58113
     name: eclipse-che
@@ -488,7 +473,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.484482742Z"
+    created: "2022-07-04T16:47:11.20430446Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 9176a85f36a77f63f3d463c19f20dedb725b4ff271eecda6fe419c692873f7ab
     name: eclipse-che
@@ -578,7 +563,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.483289195Z"
+    created: "2022-07-04T16:47:11.203027054Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 670cccd3320d65afc4ef477b7243c91f0ddaba400939e45601684f33747e6fad
     name: eclipse-che
@@ -668,7 +653,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.482106848Z"
+    created: "2022-07-04T16:47:11.200865643Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 4ff3ef346985af1c8cfd4533a078661b1cac5fb391b61f0612bcf305406ca59b
     name: eclipse-che
@@ -787,7 +772,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.480355579Z"
+    created: "2022-07-04T16:47:11.199675737Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: d542903c6fa5ee2737c0c6de31b28f8061792186eff26cbfd45fb6b804600316
     name: eclipse-che
@@ -922,7 +907,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.479081829Z"
+    created: "2022-07-04T16:47:11.198486231Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: bef03cff9f0d9a1c4e8695af9f89bace7483b940b19085c5609387b7e9bf36a8
     name: eclipse-che
@@ -1057,7 +1042,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.477631271Z"
+    created: "2022-07-04T16:47:11.197290125Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: ebb32faf3df08bcb1c0220494b9ff2965b22bbe120afa995e426248cebe96f50
     name: eclipse-che
@@ -1192,7 +1177,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.476413923Z"
+    created: "2022-07-04T16:47:11.196050318Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 91c3fee6a8a1985db1458ca8f69f1ce6d4a8c51d247119922c8f06238bd47238
     name: eclipse-che
@@ -1327,7 +1312,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.474794459Z"
+    created: "2022-07-04T16:47:11.194999713Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 485b22612ee63c30e8680fb2fb5e376762deb70487d470d6293c4abf477e5cf9
     name: eclipse-che
@@ -1462,7 +1447,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.473506208Z"
+    created: "2022-07-04T16:47:11.193652406Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: 1e47c7db4e8b2056bf65c8cb14f6b1e398bd97f010cd6ccc2db58ea63d92c300
     name: eclipse-che
@@ -1597,7 +1582,7 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.465049974Z"
+    created: "2022-07-04T16:47:11.191370095Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: a404541c568b784ab11f443eb47441807192477879c1be0f8e09d9a2534f9244
     name: eclipse-che
@@ -1732,11 +1717,11 @@ entries:
       artifacthub.io/operatorCapabilities: Seamless Upgrades
       artifacthub.io/provider: Eclipse Foundation
     apiVersion: v1
-    created: "2022-07-04T14:03:43.464020533Z"
+    created: "2022-07-04T16:47:11.19039149Z"
     description: A Helm chart for deploying Eclipse Che on a Kubernetes
     digest: aa4efbd1168883302315f172124bc11f433131a01b70aaf772e08eec3e3d551b
     name: eclipse-che
     urls:
     - https://eclipse-che.github.io/che-operator/charts/stable/eclipse-che-7.39.2.tgz
     version: 7.39.2
-generated: "2022-07-04T14:03:43.462521074Z"
+generated: "2022-07-04T16:47:11.189026683Z"
