--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -266,6 +266,16 @@ spec:
                   runningLimit:
                     description: Maximum number of the running workspaces per user.
                     type: string
+                  secondsOfInactivityBeforeIdling:
+                    default: 900
+                    description: Idle timeout for workspaces in seconds. This timeout is the duration after which a workspace will be idled if there is no activity. To disable workspace idling due to inactivity, set this value to -1.
+                    format: int32
+                    type: integer
+                  secondsOfRunBeforeIdling:
+                    default: -1
+                    description: Run timeout for workspaces in seconds. This timeout is the maximum duration a workspace runs. To disable workspace run timeout, set this value to -1.
+                    format: int32
+                    type: integer
                 required:
                 - enable
                 type: object
@@ -3349,6 +3359,16 @@ spec:
                       type: string
                     description: The node selector limits the nodes that can run the workspace pods.
                     type: object
+                  secondsOfInactivityBeforeIdling:
+                    default: 900
+                    description: Idle timeout for workspaces in seconds. This timeout is the duration after which a workspace will be idled if there is no activity. To disable workspace idling due to inactivity, set this value to -1.
+                    format: int32
+                    type: integer
+                  secondsOfRunBeforeIdling:
+                    default: -1
+                    description: Run timeout for workspaces in seconds. This timeout is the maximum duration a workspace runs. To disable workspace run timeout, set this value to -1.
+                    format: int32
+                    type: integer
                   storage:
                     default:
                       pvcStrategy: common
