--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -5393,7 +5393,7 @@ spec:
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
-                    pvcStrategy: common
+                    pvcStrategy: per-user
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
@@ -6908,11 +6908,11 @@ spec:
                     type: integer
                   storage:
                     default:
-                      pvcStrategy: common
+                      pvcStrategy: per-user
                     description: Workspaces persistent storage.
                     properties:
-                      pvc:
-                        description: PVC settings.
+                      perUserStrategyPvcConfig:
+                        description: PVC settings when using the "per-user" PVC strategy.
                         properties:
                           claimSize:
                             description: Persistent Volume Claim size. To update the
@@ -6926,12 +6926,14 @@ spec:
                             type: string
                         type: object
                       pvcStrategy:
-                        default: common
-                        description: Persistent volume claim strategy for the Che
-                          server. Only the `common` strategy (all workspaces PVCs
-                          in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                        default: per-user
+                        description: 'Persistent volume claim strategy for the Che
+                          server. The supported strategies are: `per-user` (all workspaces
+                          PVCs in one volume) and ''per-workspace'' (each workspace
+                          is given its own individual PVC). For details, see https://github.com/eclipse/che/issues/21185.'
                         enum:
                         - common
+                        - per-user
                         - per-workspace
                         type: string
                     type: object
