--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -3704,7 +3704,7 @@ spec:
                   secondsOfInactivityBeforeIdling: 1800
                   secondsOfRunBeforeIdling: -1
                   storage:
-                    pvcStrategy: common
+                    pvcStrategy: per-user
                 description: Development environment default configuration options.
                 properties:
                   defaultComponents:
@@ -4676,7 +4676,7 @@ spec:
                     type: integer
                   storage:
                     default:
-                      pvcStrategy: common
+                      pvcStrategy: per-user
                     description: Workspaces persistent storage.
                     properties:
                       pvc:
@@ -4690,10 +4690,11 @@ spec:
                             type: string
                         type: object
                       pvcStrategy:
-                        default: common
-                        description: Persistent volume claim strategy for the Che server. Only the `common` strategy (all workspaces PVCs in one volume) is supported . For details, see https://github.com/eclipse/che/issues/21185.
+                        default: per-user
+                        description: 'Persistent volume claim strategy for the Che server. The supported strategies are: `per-user` (all workspaces PVCs in one volume) and ''per-workspace'' (each workspace is given its own individual PVC). For details, see https://github.com/eclipse/che/issues/21185.'
                         enum:
                         - common
+                        - per-user
                         - per-workspace
                         type: string
                     type: object
