Update dev resources
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -417,7 +417,7 @@ spec:
                     description: Maximum number of the running workspaces per user.
                     type: string
                   secondsOfInactivityBeforeIdling:
-                    default: 900
+                    default: 1800
                     description: Idle timeout for workspaces in seconds. This timeout
                       is the duration after which a workspace will be idled if there
                       is no activity. To disable workspace idling due to inactivity,
@@ -3543,6 +3543,8 @@ spec:
                 default:
                   defaultNamespace:
                     template: <username>-che
+                  secondsOfInactivityBeforeIdling: 1800
+                  secondsOfRunBeforeIdling: -1
                   storage:
                     pvcStrategy: common
                 description: Development environment default configuration options.
@@ -5038,7 +5040,7 @@ spec:
                       workspace pods.
                     type: object
                   secondsOfInactivityBeforeIdling:
-                    default: 900
+                    default: 1800
                     description: Idle timeout for workspaces in seconds. This timeout
                       is the duration after which a workspace will be idled if there
                       is no activity. To disable workspace idling due to inactivity,
