--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -440,7 +440,7 @@ spec:
                       description: Maximum number of the running workspaces per user.
                       type: string
                     secondsOfInactivityBeforeIdling:
-                      default: 900
+                      default: 1800
                       description: Idle timeout for workspaces in seconds. This timeout
                         is the duration after which a workspace will be idled if there
                         is no activity. To disable workspace idling due to inactivity,
@@ -3644,6 +3644,8 @@ spec:
                   default:
                     defaultNamespace:
                       template: <username>-che
+                    secondsOfInactivityBeforeIdling: 1800
+                    secondsOfRunBeforeIdling: -1
                     storage:
                       pvcStrategy: common
                   description: Development environment default configuration options.
@@ -5190,7 +5192,7 @@ spec:
                         the workspace pods.
                       type: object
                     secondsOfInactivityBeforeIdling:
-                      default: 900
+                      default: 1800
                       description: Idle timeout for workspaces in seconds. This timeout
                         is the duration after which a workspace will be idled if there
                         is no activity. To disable workspace idling due to inactivity,
