--- a/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/deploy/deployment/kubernetes/objects/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -262,7 +262,7 @@ spec:
                     description: Maximum number of the running workspaces per user.
                     type: string
                   secondsOfInactivityBeforeIdling:
-                    default: 900
+                    default: 1800
                     description: Idle timeout for workspaces in seconds. This timeout is the duration after which a workspace will be idled if there is no activity. To disable workspace idling due to inactivity, set this value to -1.
                     format: int32
                     type: integer
@@ -2398,6 +2398,8 @@ spec:
                 default:
                   defaultNamespace:
                     template: <username>-che
+                  secondsOfInactivityBeforeIdling: 1800
+                  secondsOfRunBeforeIdling: -1
                   storage:
                     pvcStrategy: common
                 description: Development environment default configuration options.
@@ -3355,7 +3357,7 @@ spec:
                     description: The node selector limits the nodes that can run the workspace pods.
                     type: object
                   secondsOfInactivityBeforeIdling:
-                    default: 900
+                    default: 1800
                     description: Idle timeout for workspaces in seconds. This timeout is the duration after which a workspace will be idled if there is no activity. To disable workspace idling due to inactivity, set this value to -1.
                     format: int32
                     type: integer
