chore: Deprecate CheCluster API v1 (#1456)
* chore: Deprecate CheCluster API v1

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update warning message

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -42,7 +42,10 @@ spec:
     singular: checluster
   scope: Namespaced
   versions:
-    - name: v1
+    - deprecated: true
+      deprecationWarning: org.eclipse.che/v1 CheCluster is deprecated and will be
+        removed in future releases
+      name: v1
       schema:
         openAPIV3Schema:
           description: The `CheCluster` custom resource allows defining and managing
