--- a/helmcharts/next/templates/org_v2_checluster.yaml
+++ b/helmcharts/next/templates/org_v2_checluster.yaml
@@ -26,3 +26,4 @@ spec:
       oAuthClientName: '{{ .Values.networking.auth.oAuthClientName }}'
       identityProviderURL: '{{ .Values.networking.auth.identityProviderURL }}'
   containerRegistry: {}
+  gitServices: {}
