--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -58,6 +58,7 @@ metadata:
             "components": {},
             "containerRegistry": {},
             "devEnvironments": {},
+            "gitServices": {},
             "networking": {}
           }
         }
@@ -129,6 +130,10 @@ spec:
           - description: Che components configuration.
             displayName: Components
             path: components
+          - description: A configuration that allows users to work with remote Git
+              repositories.
+            displayName: Git Services
+            path: gitServices
           - description: Networking, Che authentication, and TLS configuration.
             displayName: Networking
             path: networking
@@ -136,6 +141,38 @@ spec:
               images.
             displayName: Container registry
             path: containerRegistry
+          - displayName: BitBucket
+            path: gitServices.bitbucket
+          - description: 'Kubernetes secret, that contains Base64-encoded BitBucket
+              OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0: private key, BitBucket Application
+              link consumer key and BitBucket Application link shared secret must
+              be stored in `private.key`, `consumer.key` and `shared_secret` keys
+              of the Kubernetes secret respectively. For OAuth 2.0: BitBucket OAuth
+              consumer key and BitBucket OAuth consumer secret must be stored in `id`
+              and `secret` keys of the Kubernetes secret respectively.'
+            displayName: Secret Name
+            path: gitServices.bitbucket[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - displayName: GitHub
+            path: gitServices.github
+          - description: Kubernetes secret, that contains Base64-encoded GitHub OAuth
+              Client id and GitHub OAuth Client secret data. The GitHub OAuth data
+              must be stored in the Kubernetes secret in `id` and `secret` keys respectively.
+            displayName: Secret Name
+            path: gitServices.github[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - displayName: GitLab
+            path: gitServices.gitlab
+          - description: Kubernetes secret, that contains Base64-encoded GitHub Application
+              id and GitHub Application Client secret data. The GitHub Application
+              data must be stored in `id` and `secret` keys of the Kubernetes secret
+              respectively.
+            displayName: Secret Name
+            path: gitServices.gitlab[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
         statusDescriptors:
           - description: Specifies the current phase of the Che deployment.
             displayName: ChePhase
@@ -258,6 +295,42 @@ spec:
             path: devWorkspace.enable
             x-descriptors:
               - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+          - description: A configuration that allows users to work with remote Git
+              repositories.
+            displayName: Git Services
+            path: gitServices
+          - displayName: BitBucket
+            path: gitServices.bitbucket
+          - description: 'Kubernetes secret, that contains Base64-encoded BitBucket
+              OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0: private key, BitBucket Application
+              link consumer key and BitBucket Application link shared secret must
+              be stored in `private.key`, `consumer.key` and `shared_secret` keys
+              of the Kubernetes secret respectively. For OAuth 2.0: BitBucket OAuth
+              consumer key and BitBucket OAuth consumer secret must be stored in `id`
+              and `secret` keys of the Kubernetes secret respectively.'
+            displayName: Secret Name
+            path: gitServices.bitbucket[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - displayName: GitHub
+            path: gitServices.github
+          - description: Kubernetes secret, that contains Base64-encoded GitHub OAuth
+              Client id and GitHub OAuth Client secret data. The GitHub OAuth data
+              must be stored in the Kubernetes secret in `id` and `secret` keys respectively.
+            displayName: Secret Name
+            path: gitServices.github[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
+          - displayName: GitLab
+            path: gitServices.gitlab
+          - description: Kubernetes secret, that contains Base64-encoded GitHub Application
+              id and GitHub Application Client secret data. The GitHub Application
+              data must be stored in `id` and `secret` keys of the Kubernetes secret
+              respectively.
+            displayName: Secret Name
+            path: gitServices.gitlab[0].secretName
+            x-descriptors:
+              - urn:alm:descriptor:io.kubernetes:Secret
           - description: Kubernetes Image Puller configuration
             displayName: Kubernetes Image Puller
             path: imagePuller
@@ -1391,6 +1464,27 @@ spec:
     name: Eclipse Foundation
   version: 7.53.0-670.next
   webhookdefinitions:
+    - admissionReviewVersions:
+        - v1
+        - v1beta1
+      containerPort: 443
+      deploymentName: che-operator
+      failurePolicy: Fail
+      generateName: vchecluster.kb.io
+      rules:
+        - apiGroups:
+            - org.eclipse.che
+          apiVersions:
+            - v2
+          operations:
+            - CREATE
+            - UPDATE
+          resources:
+            - checlusters
+      sideEffects: None
+      targetPort: 9443
+      type: ValidatingAdmissionWebhook
+      webhookPath: /validate-org-eclipse-che-v2-checluster
     - admissionReviewVersions:
         - v1
         - v2
