--- a/config/manifests/bases/che-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/che-operator.clusterserviceversion.yaml
@@ -79,12 +79,46 @@ spec:
       - description: Che components configuration.
         displayName: Components
         path: components
+      - description: A configuration that allows users to work with remote Git repositories.
+        displayName: Git Services
+        path: gitServices
       - description: Networking, Che authentication, and TLS configuration.
         displayName: Networking
         path: networking
       - description: Configuration of an alternative registry that stores Che images.
         displayName: Container registry
         path: containerRegistry
+      - displayName: BitBucket
+        path: gitServices.bitbucket
+      - description: 'Kubernetes secret, that contains Base64-encoded BitBucket OAuth
+          1.0 or OAuth 2.0 data. For OAuth 1.0: private key, BitBucket Application
+          link consumer key and BitBucket Application link shared secret must be stored
+          in `private.key`, `consumer.key` and `shared_secret` keys of the Kubernetes
+          secret respectively. For OAuth 2.0: BitBucket OAuth consumer key and BitBucket
+          OAuth consumer secret must be stored in `id` and `secret` keys of the Kubernetes
+          secret respectively.'
+        displayName: Secret Name
+        path: gitServices.bitbucket[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - displayName: GitHub
+        path: gitServices.github
+      - description: Kubernetes secret, that contains Base64-encoded GitHub OAuth
+          Client id and GitHub OAuth Client secret data. The GitHub OAuth data must
+          be stored in the Kubernetes secret in `id` and `secret` keys respectively.
+        displayName: Secret Name
+        path: gitServices.github[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - displayName: GitLab
+        path: gitServices.gitlab
+      - description: Kubernetes secret, that contains Base64-encoded GitHub Application
+          id and GitHub Application Client secret data. The GitHub Application data
+          must be stored in `id` and `secret` keys of the Kubernetes secret respectively.
+        displayName: Secret Name
+        path: gitServices.gitlab[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
       statusDescriptors:
       - description: Specifies the current phase of the Che deployment.
         displayName: ChePhase
@@ -207,6 +241,40 @@ spec:
         path: devWorkspace.enable
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+      - description: A configuration that allows users to work with remote Git repositories.
+        displayName: Git Services
+        path: gitServices
+      - displayName: BitBucket
+        path: gitServices.bitbucket
+      - description: 'Kubernetes secret, that contains Base64-encoded BitBucket OAuth
+          1.0 or OAuth 2.0 data. For OAuth 1.0: private key, BitBucket Application
+          link consumer key and BitBucket Application link shared secret must be stored
+          in `private.key`, `consumer.key` and `shared_secret` keys of the Kubernetes
+          secret respectively. For OAuth 2.0: BitBucket OAuth consumer key and BitBucket
+          OAuth consumer secret must be stored in `id` and `secret` keys of the Kubernetes
+          secret respectively.'
+        displayName: Secret Name
+        path: gitServices.bitbucket[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - displayName: GitHub
+        path: gitServices.github
+      - description: Kubernetes secret, that contains Base64-encoded GitHub OAuth
+          Client id and GitHub OAuth Client secret data. The GitHub OAuth data must
+          be stored in the Kubernetes secret in `id` and `secret` keys respectively.
+        displayName: Secret Name
+        path: gitServices.github[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
+      - displayName: GitLab
+        path: gitServices.gitlab
+      - description: Kubernetes secret, that contains Base64-encoded GitHub Application
+          id and GitHub Application Client secret data. The GitHub Application data
+          must be stored in `id` and `secret` keys of the Kubernetes secret respectively.
+        displayName: Secret Name
+        path: gitServices.gitlab[0].secretName
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes:Secret
       - description: Kubernetes Image Puller configuration
         displayName: Kubernetes Image Puller
         path: imagePuller
