--- a/config/openshift/patches/cainjection_in_webhook.yaml
+++ b/config/openshift/patches/cainjection_in_webhook.yaml
@@ -10,14 +10,9 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-apiVersion: org.eclipse.che/v2
-kind: CheCluster
+apiVersion: admissionregistration.k8s.io/v1
+kind: ValidatingWebhookConfiguration
 metadata:
-  name: eclipse-che
-  namespace: eclipse-che
-spec:
-  components: {}
-  devEnvironments: {}
-  networking: {}
-  containerRegistry: {}
-  gitServices: {}
+  name: org.eclipse.che
+  annotations:
+    service.beta.openshift.io/inject-cabundle: "true"
